--- a/hellorootkitty.tex
+++ b/hellorootkitty.tex
@@ -10,23 +10,23 @@ Due to their prominent position, operating systems become a common target of att
 Kernel-mode rootkits target the core of an operating system. It goes without saying that they are the hardest to detect and remove. Such rootkits appear very often in the form of device drivers (Windows platform) or Loadable Kernel Module (Linux kernel). 
 In other cases, a kernel-mode rootkit may be introduced by a software bug in the kernel and  triggered by a malicious or a benign but-exploitable process.
 Regardless of the way the rootkit is introduced, the result is malicious code running with operating system privileges which can add and execute additional code or modify existent kernel code. The activities resulting from a successful attack can range from spamming and key-logging to stealing private user-data and disabling security software running on the host.
-In the past, rootkits have also been used to turn their targets into nodes of a botnet as with Storm Worm~\cite{1387718} or to perform massive bank frauding~\cite{mcaffee}.
-An even more subtle type of rootkits does not introduce new code at all, but rather makes use of existing fragments of operating system code - that will be considered trusted by any active monitor - to fabricate their malicious functionality. The execution of these fragments in a specific order, choosen by the attacked has give birth to an entirely new way of compromising the kernel called \texttt{return-oriented rookits} \cite{Hund2009}. 
+In the past, rootkits have also been used to turn their targets into nodes of a botnet as with Storm Worm~\cite{1387718} or to perform massive bank frauds ~\cite{mcaffee}.
+An even more subtle type of rootkits does not introduce new code at all, but rather makes use of existing fragments of operating system code - that will be considered trusted by any active monitor - to fabricate their malicious functionality. The execution of these fragments in a specific order, chosen by the attacker has give birth to an entirely new way of compromising the kernel called \texttt{return-oriented rookits} \cite{Hund2009}. 
 
 Generally speaking, changing the control flow of the operating system kernel involves either changing the content of specific kernel objects such as existing fragments of code with new code or overwriting kernel function pointers.
-Several approaches that mitigate rootkits have been developed by security researchers who consider modified kernel-data structures an evidence of attack. Unfortunately, many of these approached are affected by substantial overhead~\cite{livewire,5} or miss a fundamental security requirement such as isolation\cite{hookscout}. 
+Several approaches that mitigate rootkits have been developed by security researchers who consider modified kernel-data structures an evidence of attack. Unfortunately, many of these approaches are affected by substantial overhead~\cite{livewire,5} or miss a fundamental security requirement such as isolation\cite{hookscout}. 
 Isolation is needed to prevent a countermeasure in the target system from being disabled or crippled by a potential attack. When malicious code is running at the same privilege level as the operating system kernel, no isolation mechanism is in place and the attacker's code is capable of accessing arbitrary memory locations or hardware resources.
 The property that makes virtualisation particularly attractive in the field of security research is that isolation is guaranteed by the current virtualisation-enabled hardware. 
 
-Other countermeasures have been presented in which operating system kernels are protected against rootkits by executing only validated code code \cite{SecVisor,NICKLE,5}. But the aforementioned type of rootkit~\cite{Hund2009} that doesn't introduce new kernel code and basically re-uses fragments of validated code can bypass such countermeasures.
+Other countermeasures have been presented in which operating system kernels are protected against rootkits by executing only validated code \cite{SecVisor,NICKLE,5}. But the aforementioned type of rootkit~\cite{Hund2009} that doesn't introduce new kernel code and basically re-uses fragments of validated code can bypass such countermeasures.
 In \cite{4} a countermeasure to detect changes of the kernel's control flow graph is presented; Anh et al. \cite{MAVMM} uses virtualisation technology and emulation to perform malware analysis and \cite{HookSafe} protects kernel function pointers. Another interesting work is \cite{PoKer} which gives more attention to kernel rootkit profiling and reveals key aspects of the rootkit behaviour by the analysis of compromised kernel objects. 
 Determining which kernel objects are modified by a rootkit not only provides an overview of the damage inflicted on the target but is also an important step to design and implement systems to detect and prevent rootkits.
 %FIXME add this to chapter 1 virtualization tech for non-virtualization specific purposes
 %A rising trend in security research is the use of virtualization technology for non-virtualization specific purposes~\cite{Gadaleta2009,QubesOS,Dewant2008,Criswell2007}. 
 %Using the appropriate instruction primitives of such hardware, makes it straightforward to fully separate and isolate the target from the monitor system. 
 In this chapter we present an invariance-enforcing framework that mitigates rootkits in common operating system kernels. 
-Our protection system runs inside a hypervisor and protects operating systems that have been virtualized. 
-Some practical constraints that led to the relaxation of the original problem, impose negligible performance overhead on the virtualized system.
+Our protection system runs inside a hypervisor and protects operating systems that have been virtualised. 
+Some practical constraints that led to the relaxation of the original problem, impose negligible performance overhead on the virtualised system.
 Moreover it does not require kernel-wide changes making it an attractive solution for production systems.
 %FIXME use this text 
 %We start from the observation that many critical kernel data structures are invariant. Many data structures used by rootkits to change the control-flow of the kernel contain values that would normally stay unchanged for the lifetime of a running kernel. Our protection system consists of a monitor that checks the contents of data structures that need to be protected at regular times and detects whether their contents have changed. If a change is detected, our system warns the administrator of the exploited kernel and corrects the problem by restoring the modified data structures to their original contents. Our monitor runs inside a hypervisor and protects operating systems that are being virtualized. Due to the hardware-guarantees of isolation that virtualization provides, an attacker has no way of disabling our monitor or tamper with the memory areas that our system uses. 
@@ -39,7 +39,7 @@ The remainder of this chapter is structured as follows. Section~\ref{hr:motivati
 We evaluate our prototype implementation in Section~\ref{hr:evaluation} and present its limitations in Section~\ref{hr:limitations}. We discuss related work on rootkit detection in Section~\ref{hr:related} and conclude in Section~\ref{hr:conclusion}.
 
 \section{Motivation}\label{hr:motivation}
-In this section we describe common rootkit technology and we also present the model of the attacker that our system can detect and neutralize.
+In this section we describe common rootkit technology and we also present the model of the attacker that our system can detect and neutralise.
 
 \subsection{Rootkits}
 Rootkits are pieces of software that attackers deploy in order to hide their presence from a system. Rootkits can be classified according to the target and consequently to the privilege-level which they require to operate. The two most common rootkit classes are: a) user-mode and b) kernel-mode.
@@ -78,7 +78,7 @@ Knark & Add hooks to /proc file system \\
 \
 
 \subsection{Threat Model}
-In order to describe the environment in which our mitigation technique will operate, we make some assumptions about the scenario that an attacker might create. We assume that the operating system to be protected and which is being attacked is virtualized. This means that it runs on top of a hypervisor which executes at a higher privilege level than the operating system itself. Virtualisation-enabled hardware guarantees isolation. Thus we assume that the guest operating system cannot access the memory or code of the hypervisor. 
+In order to describe the environment in which our mitigation technique will operate, we make some assumptions about the scenario that an attacker might create. We assume that the operating system to be protected and which is being attacked is virtualised. This means that it runs on top of a hypervisor which executes at a higher privilege level than the operating system itself. Virtualisation-enabled hardware guarantees isolation. Thus we assume that the guest operating system cannot access the memory or code of the hypervisor. 
 Moreover, no physical access to the host machine is granted.
 We have designed a system that detects the presence of a rootkit after it has been deployed, a fact that allows our model to include all possible ways of introducing a rootkit in a system. 
 
@@ -126,7 +126,7 @@ It is important to point out that our system must be provided with a list of ker
 As already stated, the most beneficial aspect of implementing countermeasures in a separated virtual machine or within the hypervisor is the increased degree of security via isolation. Unfortunately, it often leads to higher performance overhead than the equivalent implementation in the target system. 
 A challenging task is that of checking integrity outside of the target operating system while limiting the performance overhead. We achieve this by exploiting the regular interaction of a hypervisor and the guest operating system. 
 
-As described in Chapter \ref{virt:tech}, in a virtualized environment the guest's software stack runs on a logical processor in VMX non-root operation~\cite{Intel2007}. This mode differs from the ordinary operation mode because certain instructions executed by the guest kernel may cause a \texttt{VMExit} that returns control to the hypervisor.
+As described in Chapter \ref{virt:tech}, in a virtualised environment the guest's software stack runs on a logical processor in VMX non-root operation~\cite{Intel2007}. This mode differs from the ordinary operation mode because certain instructions executed by the guest kernel may cause a \texttt{VMExit} that returns control to the hypervisor.
 
 
 Our countermeasure performs integrity checks every time the guest kernel writes to a control register (MOV\_CR* event) which is a privileged instruction of the type listed in Table \ref{virt:insntrap} that in-turn causes a \texttt{VMExit}. 
@@ -183,7 +183,7 @@ a) the system will report an ongoing attack or
 
 b) the system attempts to restore the contents of the compromised object if a copy has been provided by the trusted module. 
 
-Since the hypervisor and the guest share the same physical address space, the hypervisor can restore the original content by mapping the physical address of the compromised object in its virtual space. The untampered value is then copied and control returns to the guest. The restoration of modified critical data structures means that, while the rootkit's code is still present in the address space of the kernel, it is no longer reachable by the kernel control-flow and thus it is neutralized. 
+Since the hypervisor and the guest share the same physical address space, the hypervisor can restore the original content by mapping the physical address of the compromised object in its virtual space. The untampered value is then copied and control returns to the guest. The restoration of modified critical data structures means that, while the rootkit's code is still present in the address space of the kernel, it is no longer reachable by the kernel control-flow and thus it is neutralised. 
 One drawback of the repairing phase is data inconsistency: if a process in the guest is using the data structure that is being repaired by the hypervisor, on the next VM Entry an inconsistency might be raised. However, switching from VMX-root to VMX-non-root causes a flush of the Translation Lookaside Buffer (TLB). Any code in the guest that was using the compromised object will perform the address translation and memory load again and will thus load the restored value.
 
 As previously mentioned, whenever task switching, the CR3 register's contents are changed. A trap of the MOV\_CR* event occurs and integrity-checking is performed. This checking occurs outside of the guest operating system and thus cannot be influenced nor delayed by any other event that occurs in the guest.
@@ -251,7 +251,7 @@ The critical kernel object that the rootkit modifies is the system-call table wh
 
 Before installing the rootkit, we gave as input to our trusted module, the address of the invariant system-call table
 and its size. In a real-life scenario, our mitigation would work in concert with an external source that detects the memory locations of the invariant critical kernel-objects and their size. This source can either be automatic invariance-discovering systems or kernel programmers who wish to protect their data structures from malicious modifications. 
-Once our system was booted we loaded the rootkit in the running kernel. When the next \texttt{MOV} to control-register occurred, the system trapped into the hypervisor changes on the invariant system-call table were detected. After reporting the attack, the system repaired the system-call table by restoring the system-call entry with the original memory address. In this specific case although the rootkit's code was still loaded in kernel-memory it was no longer reachable by any statement and thus inactive. 
+Once our system was booted we loaded the rootkit in the running kernel. When the next \texttt{MOV} to control-register occurred, the system, trapped into the hypervisor, was capable of detecting changes on the invariant system-call table. After reporting the attack, the system repaired the system-call table by restoring the system-call entry with the original memory address. In this specific case although the rootkit's code was still loaded in kernel-memory it was no longer reachable by any statement and thus inactive. 
 
 
 %This shows, that \emph{Hello rootKitty} can detect rootkits and repair the kernel provided that a) the kernel objects used by the rootkit to achieve control are invariant and b) the utilized kernel objects are included in the list of invariance that is given to our system.
@@ -262,7 +262,7 @@ A list of synthetic kernel objects has been created to run a set of benchmarking
 The trusted module has been instrumented to create a set of objects with the aforementioned characteristics. 
 
 Checking the integrity of 15,000 kernel objects at a time, and only then returning control to the guest operating system is not a practical solution and it is affected by a considerable overhead that dramatically penalises the usability of the overall system. Moreover this solution would not scale with the number of objects that can arbitrarily grow if the goal is to minimise the attack surface. Therefore at each \texttt{VMExit} we check each time a different subset of the object set. This parameter is configurable and its value depends on the priorities of each installation (performance versus detection time). 
-In our proof of concept the hypervisor will check the integrity of 100 objects. of 128 bytes each every time a MOV\_CR event is trapped. Needless to say, 150 \texttt{VMExit} events must occur in order to check the integrity of the entire list.
+In our proof of concept the hypervisor will check the integrity of 100 objects of 128 bytes each every time a MOV\_CR event is trapped. Needless to say, 150 \texttt{VMExit} events must occur in order to check the integrity of the entire list.
 
 \begin{figure}[htbp] 
 \begin{center}
@@ -272,10 +272,10 @@ In our proof of concept the hypervisor will check the integrity of 100 objects. 
 \end{center}
 \end{figure}
 
-Measuring timings in a virtualized environment differs from the usual procedure used with traditional systems. The guest's timers might be paused when the hypervisor is performing any other operation. Therefore we measure real (wall-clock) timings in the guest to compensate for any inaccuracy that might occur.
+Measuring timings in a virtualised environment differs from the usual procedure used with traditional systems. The guest's timers might be paused when the hypervisor is performing any other operation. Therefore we measure real (wall-clock) timings in the guest to compensate for any inaccuracy that might occur.
 
 For the sake of completeness, three distinct benchmarks have been performed on our system, that measure three different aspects for a better evaluation of the performance impact.
-We collected results from ApacheBench \cite{apachebench} sending requests on a local webserver running lighttpd (Table \ref{apache}) and from SPECINT 2000 as macrobenchmarks in order to estimate the delay perceived by the user (Table \ref{specbench}). Lastly, we collected accurate timings of microbenchmarks from lmbench (Table \ref{microbench}). The macrobenchmarks show that our system imposes neglibible overhead on the SPEC applications (0.005\%) allowing its widespread adoption as a security mechanism in virtualized systems. 
+We collected results from ApacheBench \cite{apachebench} sending requests on a local webserver running lighttpd (Table \ref{apache}) and from SPECINT 2000 as macrobenchmarks in order to estimate the delay perceived by the user (Table \ref{specbench}). Lastly, we collected accurate timings of microbenchmarks from lmbench (Table \ref{microbench}). The macrobenchmarks show that our system imposes neglibible overhead on the SPEC applications (0.005\%) allowing its widespread adoption as a security mechanism in virtualised systems. 
 
 As expected, microbenchmarks show a consistent overhead on process forking. In Table \ref{microbench} we do not report measurements of context switching latencies because the numbers produced by this benchmark are inaccurate \cite{lmbenchbug,lmbenchevil}. An improvement of local communication bandwidth is due to the slower context switching which has the side effect of slightly increasing the troughtput of file or mmap re-reading operations.  
 
@@ -632,7 +632,7 @@ The main limitation of HookSafe consists in the fact that it does not protect no
 An approach that dynamically monitors operating system kernel integrity is described in \cite{SBCFI}. In this work the authors argue that enforcing control flow integrity can effectively protect against a large class of kernel rootkits. The main observation consists in the fact that, despite the specific behaviour of rootkits (such as injecting code, compromising function pointers, changing the value of specific registers, etc.), the execution flow of a compromised system will differ from the execution flow determined before the attack.
 Therefore, control flow integrity can be considered a valuable measure of the integrity of the overall system.
 Due to the persistent nature of rootkits, monitoring control flow integrity continuously is not required. Infrequent monitoring can still effectively protect the system and reduce the performance overhead consistently.
-SBCFI enforce and approximation of control flow integrity, called state-based control flow integrity. While control flow integrity checks each branch of a precomputed control flow graph in step with the program's execution, SBCFI periodically examines the kernel's state and validate it as a whole.
+SBCFI enforces an approximation of control flow integrity, called state-based control flow integrity. While control flow integrity checks each branch of a precomputed control flow graph in step with the program's execution, SBCFI periodically examines the kernel's state and validate it as a whole.
 The target kernel code is first checked for any modification, then all static branches are validated. In a successive phase, all usable function pointers of the heap are verified that they target valid code.
 The approximated nature of control flow integrity makes the overhead of SBCFI negligible. Moreover, the control flow integrity monitor can be isolated from the target operating system. 
 Both the implementations of SBCFI on top of the Xen hypervisor and the VMware Workstation virtual machine monitor have similar performance impact.
@@ -649,15 +649,15 @@ Recent malware like Storm and Conficker are known to detect they are running ins
 
 
 \paragraph{MAVMM}
-MAVMM \cite{MAVMM} is a virtual machine monitor specifically designed for malware analysis. It can extract useful information for a complete profile of the investigated malware such as memory pages, system calls and accesses to disks and network devices. Contrarily to other hypervisors, MAVMM lets most hardware access requests go through without interception. This feature makes the entire platform invisible to the malware while still controlling accesses to the aformenentioned areas of the system. The analysis platform only intercepts guest execution at a few places, in order to protect its own integrity and log the guests' behaviours for further analysis. Hardware supported Nested Page Tables (NPT) are used to protect its memory from being compromised by the guest, while an IOMMU unit is used to prevent any tamper by external hardware devices via DMA.
+MAVMM \cite{MAVMM} is a virtual machine monitor specifically designed for malware analysis. It can extract useful information for a complete profile of the investigated malware such as memory pages, system calls and accesses to disks and network devices. Contrarily to other hypervisors, MAVMM lets most hardware access requests go through without interception. This feature makes the entire platform invisible to the malware while still controlling accesses to the aformentioned areas of the system. The analysis platform only intercepts guest execution at a few places, in order to protect its own integrity and log the guests' behaviours for further analysis. Hardware supported Nested Page Tables (NPT) are used to protect its memory from being compromised by the guest, while an IOMMU unit is used to prevent any tamper by external hardware devices via DMA.
 The execution trace of a guest program is recorded by single stepping its execution at each instruction. This is implemented by virtualising the TF flag that will raise a debugger exception, which will in turn be intercepted by MAVMM. 
-A log of executed system calls can give a good picture of that the malware under investigation is trying to do. MAVMM can record all system calls that a guest system invokes during its lifetime. Selective analysis of specific processes in the guest is also possible by notifying MAVMM each time a process switch occurs in the guest.
+A log of executed system calls can give a good picture of what the malware under investigation is trying to do. MAVMM can record all system calls that a guest system invokes during its lifetime. Selective analysis of specific processes in the guest is also possible by notifying MAVMM each time a process switch occurs in the guest.
 An issue to deal with consists in choosing the safest place to store collected information for further analysis. Using the same disk device would expose collected data to be compromised by the analysed malware. Therefore, an USB flash drive or a separate disk unit controlled by different device drivers is an approach preferred by the authors.
 
 
 
 \paragraph{Hookmap}
-Wang et al. \cite{hookmap} is an analysis tool against persistent rootkits based on the observation that rootkits try to hide their presence within the target kernel and they usually install kernel hooks on the corresponding kernel-side execution path invoked by the target program. Therefore given a security program, the authors argue that it is sufficient to analyse its kernel-side execution path to detect and investigate the rootkit behaviour. Linux utility programs like \emph{ls}, \emph{ps} and \emph{netstat} have been analysed and their relative kernel hooks identified. HookMap found that there are 35 kernel hooks mapped to the \emph{ls} utility, 85 kernel hooks for \emph{ps} and so forth. As a result it is a systematic approach to uncover kernel hooks that can be potentially hijacked. By recording possible control-flow transfer instructions in the kernel-side execution paths HookMap is able to derive all related kernel hooks. For isolation purposed HookMap is based on QEMU and the target operating system is running within a virtual machine environment. 
+Wang et al. \cite{hookmap} is an analysis tool against persistent rootkits based on the observation that rootkits try to hide their presence within the target kernel and they usually install kernel hooks on the corresponding kernel-side execution path invoked by the target program. Therefore given a security program, the authors argue that it is sufficient to analyse its kernel-side execution path to detect and investigate the rootkit behaviour. Linux utility programs like \emph{ls}, \emph{ps} and \emph{netstat} have been analysed and their relative kernel hooks identified. HookMap found that there are 35 kernel hooks mapped to the \emph{ls} utility, 85 kernel hooks for \emph{ps} and so forth. As a result it is a systematic approach to uncover kernel hooks that can be potentially hijacked. By recording possible control-flow transfer instructions in the kernel-side execution paths HookMap is able to derive all related kernel hooks. For isolation purposes HookMap is based on QEMU and the target operating system is running within a virtual machine environment. 
 
 
 \paragraph{HookFinder}
