--- a/virtualization.tex
+++ b/virtualization.tex
@@ -39,8 +39,7 @@ The important features of virtualisation technology, which were discovered to be
 %Abusing Cloud-Based Browsers for Fun and Profit \url{http://phys.org/news/2012-11-ways-exploit-cloud-browsers-large-scale.html}
 
 \section{Virtualisation technology} \label{virt:tech}
-Virtualisation is the set of software and hardware technologies that together allow for the existence of more than one running operating system on top of a single physical machine. While initially all of the needed mechanisms for virtualisation were emulated by software, the sustained popularity of the new technology and the desire for s
-peed and reduced performance impact led to their implementation in hardware \cite{softhard, Uhlig:2005:IVT:1069588.1069634}. Today, both Intel\footnote{Intel-VT architecture \url{http://www.intel.com/technology/virtualization/technology.htm}} and AMD\footnote{AMD-SVM architecture \url{http://sites.amd.com/us/business/it-solutions/virtualisation}} support a set of instructions whose sole purpose is to facilitate the virtualisation of operating systems. %%%SAJJAD
+Virtualisation is the set of software and hardware technologies that together allow for the existence of more than one running operating system on top of a single physical machine. While initially all of the needed mechanisms for virtualisation were emulated by software, the sustained popularity of the new technology and the desire for speed and reduced performance impact led to their implementation in hardware \cite{softhard, Uhlig:2005:IVT:1069588.1069634}. Today, both Intel\footnote{Intel-VT architecture \url{http://www.intel.com/technology/virtualization/technology.htm}} and AMD\footnote{AMD-SVM architecture \url{http://sites.amd.com/us/business/it-solutions/virtualisation}} support a set of instructions whose sole purpose is to facilitate the virtualisation of operating systems. %%%SAJJAD
 
 We report the list of instructions added to the standard Intel instruction set to enable hardware-supported virtualisation in Table \ref{virt:intelvt}.
 Although we will refer to the Intel architecture, as this is the hardware used for our prototypes, throughout this work, the concepts introduced here can be applied to equivalent hardware, supported by AMD and other vendors.
