--- a/hyperforce.tex
+++ b/hyperforce.tex
@@ -7,13 +7,13 @@
 
 
 
-Leveraging virtualisation technology to mitigate attacks to operating system kernels with a very low impact is a challenging task because of the high overhead caused by the context switch between the guest and the hypervisor. An important goal for any framework employing virtualisation as a security tool, is to guarantee the execution of critical code in the kernel-space of the virtualized operating system regardless of the state of the kernel, i.e. code that will run identically in both clean and compromised kernels.
+Leveraging virtualisation technology to mitigate attacks to operating system kernels with a very low impact is a challenging task because of the high overhead caused by the context switch between the guest and the hypervisor. An important goal for any framework employing virtualisation as a security tool, is to guarantee the execution of critical code in the kernel-space of the virtualised operating system regardless of the state of the kernel, i.e. code that will run identically in both clean and compromised kernels.
 %Designing a countermeasure that protects virtualized operating systems is considered a challenge not only because of the difficulty to modify the target system (due to the lack of sources or licenses) but also because a virtualized system is already affected by consistent overhead, by design.
 %An important goal for any framework using virtualization as a security tool, is to guarantee the execution of critical code in the kernel-space of a virtualized operating system regardless of the state of the kernel, i.e. code that will run identically in both clean and compromised kernels.
 
 By critical code we refer to code that, in general, monitors the state of the system and that it is desirable, mainly from a security point of view, to maintain its execution. Examples of such code include the integrity checking of sensitive kernel-level data structures that are usually abused by rootkits or the scanning of files and memory areas for known malware signatures, as in the case of common antivirus systems. 
 Given our assumption of a kernel-level attacker, it is also needed to ensure the integrity of the critical code itself to protect it from malicious modifications which might compromise its efficacy or completely deactivate its operations.
-As explained in Chapter \ref{hellorootkitty}, a way of achieving such a goal is to implement and execute security-critical code within the hypervisor. Alternative approaches monitor the target system from a separate virtual machine (\cite{lares, outvm, livewire}) in order to take advantage of isolation between the hypervisor and any virtual machine as well as isolation among multiple virtual machines.
+As explained in Chapter \ref{hellorootkitty}, a way of achieving such a goal is to implement and execute security-critical code within the hypervisor. Alternative approaches monitor the target system from a separate virtual machine in order to take advantage of isolation between the hypervisor and any virtual machine as well as isolation among multiple virtual machines \cite{lares, outvm, livewire}.
 Unfortunately, both approaches are known to be affected by a consistent performance overhead. Moreover, when integrity checking methods are considered, the amount of guest memory to be checked, in order to reduce the attack surface considerably, can impose an overhead or detection time that might prohibit the adoption of such solutions in production systems. 
 
 Designing approaches in which guest operating systems cooperate with the hypervisor can lead to high degrees of security, even comparable to the ones guaranteed by completely isolated systems, while significantly reducing the overall performance impact.
@@ -31,9 +31,9 @@ The chief difference between these systems that operate from within the hypervis
 %In general, current antivirus software that operates from within the same operating system to be protected, is one such system that could be deactivated or crippled by the attack itself. 
 
 \textit{In-hypervisor} security systems, in contrast, can utilize the isolation guarantees of virtualisation technology to make sure that they will be active regardless of the state of the system that they protect. 
-Unfortunately, these security benefits do not come for free. The constant transition from the virtualized operating system to the hypervisor (known as \texttt{VMExit}) and back (\texttt{VMEntry}), negatively affects the overall performance of the guest forcing one to choose between better security or better performance.
+Unfortunately, these security benefits do not come for free. The constant transition from the virtualised operating system to the hypervisor (known as \texttt{VMExit}) and back (\texttt{VMEntry}), negatively affects the overall performance of the guest forcing one to choose between better security or better performance.
 
-In this chapter we present a framework that facilitates the implementation of countermeasures to protect virtualized operating systems, with security and integrity comparable to those provided by \textit{in-hypervisor} systems but at the performance cost of \textit{in-guest} systems. The system described here follows a hybrid approach by maintaining the security-critical code within the guest, protecting its instructions and data and forcing its execution from the hypervisor. For the reasons explained above we called this framework \texttt{HyperForce}.
+In this chapter we present a framework that facilitates the implementation of countermeasures to protect virtualised operating systems, with security and integrity comparable to those provided by \textit{in-hypervisor} systems but at the performance cost of \textit{in-guest} systems. The system described here follows a hybrid approach by maintaining the security-critical code within the guest, protecting its instructions and data and forcing its execution from the hypervisor. For the reasons explained above we called this framework \texttt{HyperForce}.
 
 Taking advantage of the aforementioned framework, we re-implement the countermeasure described in Chapter \ref{hellorootkitty} since that functions as a typical \textit{in-hypervisor} rootkit-detection system. An evaluation of the countermeasure in \texttt{HyperForce} shows that it significantly outperforms the original version while maintaining comparable security guarantees.
 
@@ -41,24 +41,24 @@ The rest of the chapter is structured as follows. In Section~\ref{hf:approach} w
 
 \section{Approach}\label{hf:approach}
 The core idea of HyperForce is to combine the best features of the \textit{in-guest} and \textit{in-hypervisor} defence systems into a hybrid solution which performs as an \textit{in-guest} countermeasure while providing security comparable to \textit{in-hypervisor} countermeasures. 
-We achieve this by deploying the functional part of the countermeasure within the guest operating system while maintaining its integrity and enforcing its execution with the assistance of the hypervisor. Since the functional part of the security-critical code, i.e. its instructions and data, is running within the virtualized operating system, the main advantage of such approach is that it has native access to the resources of the virtualized operating system such as the memory, disk and API of the virtualized kernel. 
-This provides a great performance benefit for code that needs to access a high number of memory locations within the virtualized operating system since it alleviates the costly need of introspection usually required by in-hypervisor systems, i.e. the discovery of the corresponding physical memory pages of the guest's virtual memory pages and their remapping within hypervisor's space or another virtual machine's. 
+We achieve this by deploying the functional part of the countermeasure within the guest operating system while maintaining its integrity and enforcing its execution with the assistance of the hypervisor. Since the functional part of the security-critical code, i.e. its instructions and data, is running within the virtualised operating system, the main advantage of such approach is that it has native access to the resources of the virtualised operating system such as the memory, disk and API of the virtualised kernel. 
+This provides a great performance benefit for code that needs to access a high number of memory locations within the virtualised operating system since it alleviates the costly need of introspection usually required by in-hypervisor systems, i.e. the discovery of the corresponding physical memory pages of the guest's virtual memory pages and their remapping within hypervisor's space or another virtual machine's. 
 %%Code executed from the same memory address space of the guest system is, on average, much faster than executing it from an isolated environment (such as the hypervisor or another virtual machine).  
 %%We made a comparison between two monitoring approaches, one from hypervisor and one from the target system and provide details in Section \ref{casestudy}.
 
 \paragraph{Enforcement of Execution.}
-Given an arbitrary piece of security-critical code, HyperForce needs to ensure its execution at regular time intervals. A complete reliance for its execution on the virtualized operating system, could potentially allow a kernel-level attacker to intervene and inhibit the code's execution through the modification of the appropriate kernel-level data-structures. For instance, an attacker could locate the function pointer pointing to the security-critical code and overwrite it with a pointer towards their own code.
+Given an arbitrary piece of security-critical code, HyperForce needs to ensure its execution at regular time intervals. A complete reliance for its execution on the virtualised operating system, could potentially allow a kernel-level attacker to intervene and inhibit the code's execution through the modification of the appropriate kernel-level data-structures. For instance, an attacker could locate the function pointer pointing to the security-critical code and overwrite it with a pointer towards their own code.
 
 From a high-level view, HyperForce changes the execution flow of the guest kernel whenever the installed monitoring code has to be executed and restores the original execution flow upon code termination. 
 The advances of virtualisation technology allows one to implement this transition in a multitude of ways. Our decision has been influenced by the desire of minimizing the amount of instrumentation code in the hypervisor and of keeping performance overhead to a minimum.
 
-In our framework, the security-critical code is encapsulated within a function that is loaded in the virtualized operating system in the form of Loadable Kernel Module (LKM)\footnote{Although the proof-of-concept has been developed specifically for the Linux kernel, the method can be easily applied to other commodity operating systems such as Windows}. This allows the code to have native access to all of the guest operating system's resources.
+In our framework, the security-critical code is encapsulated within a function that is loaded in the virtualised operating system in the form of Loadable Kernel Module (LKM)\footnote{Although the proof-of-concept has been developed specifically for the Linux kernel, the method can be easily applied to other commodity operating systems such as Windows}. This allows the code to have native access to all of the guest operating system's resources.
 The key component of HyperForce is a virtual device, created by the hypervisor's infrastructure, that is detected and treated as a regular hardware device by the guest operating system.  
 %HyperForce then uses the infrastructure of the virtualization platform, specifically the Virtual Machine Monitor (VMM), to create a virtual device. 
 Virtual devices are supported by all modern hypervisors to simulate real hardware, such as sound-cards, graphic cards, storage units, etc. and to allow the execution of unmodified guest code, as it has been designed to run on bare metal. 
-Once the aforesaid virtual device has been created and loaded into the virtualized operating system, HyperForce registers the address of the memory location where the security-critical code has been stored to as an interrupt handler for the aforementioned virtual device. A schema is illustrated in Figure~\ref{hyperforce_schema}. 
+Once the aforesaid virtual device has been created and loaded into the virtualised operating system, HyperForce registers the address of the memory location where the security-critical code has been stored to as an interrupt handler for the aforementioned virtual device. A schema is illustrated in Figure~\ref{hyperforce_schema}. 
 The interrupt handler, and consequently the security-critical code, will be called whenever the virtual device generates an Non-Maskable Interrupt (NMI). Hence the cooperation of the hypervisor and the trusted module is based on this call-and-respond mechanism.
-Since the virtual device is fully controlled by the hypervisor, it is the hypervisor that decides when interrupts must be generated and not the virtualized operating system. Due to this fact, the eventually compromised guest kernel has no possibility to anticipate or delay the execution of the security-critical code. The logic behind is hidden from it through the isolation mechanism guaranteed by virtualisation-enabled processors.  
+Since the virtual device is fully controlled by the hypervisor, it is the hypervisor that decides when interrupts must be generated and not the virtualised operating system. Due to this fact, the eventually compromised guest kernel has no possibility to anticipate or delay the execution of the security-critical code. The logic behind is hidden from it through the isolation mechanism guaranteed by virtualisation-enabled processors.  
 This fact stops any attackers' efforts to evade detection by mimicking a non-compromised operating system just before the execution of the critical-code and restoring their malicious activities after it.
 
 \begin{figure} 
@@ -71,7 +71,7 @@ This fact stops any attackers' efforts to evade detection by mimicking a non-com
 
 \paragraph{Integrity of Code.}
 %In the previous paragraph we described the loading of security-critical code within the hypervisor and the use of virtual devices to ensure the execution of that code.
-Since the code is loaded in the guest as a LKM, it executes with the privileges of the virtualized kernel. While this is desired, it also opens up the code to attacks, e.g. modifications of its code and data, from an attacker who is in control of the virtualized kernel. 
+Since the code is loaded in the guest as a LKM, it executes with the privileges of the virtualised kernel. While this is desired, it also opens up the code to attacks, e.g. modifications of its code and data, from an attacker who is in control of the virtualised kernel. 
 Traditionally, the module could not be protected from the rest of the kernel since they both operate within the same protection ring, namely Ring 0. 
 Due to virtualisation however, the hypervisor has more power than the virtualised operating system's kernel (signified as Ring -1) and can thus protect any resources from the virtualised kernel, including memory pages. 
 
@@ -79,7 +79,7 @@ HyperForce takes advantage of the paging system provided by the Linux kernel (ex
 In order to allow the code to make changes to its data, HyperForce can unlock the memory pages before it triggers an interrupt of its virtual device and lock them back immediately after the code's execution. 
 Most of the performance penalty is due to the task of trapping an access violation from the guest to the hypervisor. Hardware-supported extended page tables (Intel EPT or AMD NPT) for the memory management unit consistently reduces this performance impact.
 
-Another way to circumvent the protection mechanism in place consists in compromising the Interrupt Descriptor Table (IDT), where pointers to interrupt handlers are stored. When a exploitable kernel-level vulnerability is found, it can be relatively easy to compromise the IDT. 
+Another way to circumvent the protection mechanism in place consists in compromising the Interrupt Descriptor Table (IDT), where pointers to interrupt handlers are stored. When an exploitable kernel-level vulnerability is found, it can be relatively easy to compromise the IDT. 
 Therefore HyperForce write-protects the memory page holding the Interrupt Descriptor Table (IDT) of the protected guest. Lastly, HyperForce protects the Interrupt Descriptor Table Register (IDTR) that contains the address of the IDT, by checking its integrity at regular intervals. The aforementioned protection will prevent any attempt to use an Interrupt Descriptor Table that is different from the one observed within the untampered system.
 The task of protecting the IDTR is a straightforward since the IDTR is not supposed to change during operating system lifetime. A schema of the selection of the interrupt gate via the IDTR is showed in Figure \ref{idtr}.
 
@@ -136,6 +136,7 @@ A re-implementation has been necessary also due to the different hypervisor tech
 A schema of the aforementioned integrity checking method implemented in KVM is provided in Fig.~\ref{hellorootkitty_schema}. It can be observed that while the implementation of the in-hypervisor approach needs instrumentation code to be added to the host kernel, the HyperForce framework requires only the system emulator to be modified (Fig.~\ref{hyperforce_schema}). Since QEMU runs as a regular process in user space, this architecture results of easier deployment in those systems in which modifying a running kernel is forbidden.  
 In both cases the trusted module needs to be added to the guest kernel.\\
 
+
 \begin{figure}
 \begin{center}
 \includegraphics[scale=0.5]{images/hellorootkitty_schema.pdf}
@@ -151,6 +152,7 @@ In order to provide reliable results, all tests have been repeated 10 times and 
 %
 %%Discussion about benchmarks (common to host and guest, micro and macro) Description of host/guest machine and environment. Performance benchmarks HyperForce  vs. hellorootKitty(KVM) According to the implementation of hello rootkitty, if the vm is not doing anything, the countermeasure is barely executed since there are very few mov cr, task switches and in general less activity. When the benchmark is executed from within the guest, this is not a problem. But when the benchmark is executed from the host we needed to stress the VM in order to force it to generate events that would have been trapped by the hypervisor. For a fair comparison with HyperForce, we stress the virtual machine in the same way and then measure the overhead of JIV from the host too.
 %%Comparison with hellorootkitty:  KVM exits more frequently than Bitvisor. KVM exits also from userspace in order to give a smoother experience to the user, specially for desktop and multimedia. In order to maintain design as closer as possible to the former version of hello rootkitty we perform the checking only if a VM-Exit occured from guest kernel space.
+
 
 \begin{table}[t]
 \centering
@@ -220,6 +222,7 @@ HF		& 5.71   (+4.3\%)      &	32.88  (+2.5\%)    \\
 %\label{guestmacro}
 \end{table}%
 \end{comment}
+
 
 
 \paragraph{Macro-benchmarks} \label{macrobench}
@@ -407,7 +410,7 @@ As a result, Kruiser implemented in Hyperforce would become a security counterme
 An infrastructure that allows the execution of security critical code, in complete isolation from the rest of the system is described in \cite{flicker}. In order to guarantee such isolation, Flicker takes advantage of hardware support such as AMD SVM or the equivalent Intel Trustes eXecution Technology. These chips allow the launch of a virtual machine monitor or a security kernel at any time, still protecting their code from malicious software.
 Contrarily to hypervisor's development, that even in the case of minimal hypervisors, usually adds thousands of lines of code to the trusted computing base (TCB), the TCB of Flicker is as small as 250 lines of code. The programmer can add only the code that implements her particular application in a bottom-up approach. 
 One of the most advantageous peculiarities of Flicker consists in the fact that isolation and code attestation can be guaranteed even in the presence of compromised BIOS, DMA devices and the operating system. 
-When the processor receives an init instructions, it disables DMA, system interrupts and debugging access, enters at 32-bit protected mode and jumps to the provided entry point to start the execution of the isolated application.
+When the processor receives an init instruction, it disables DMA, system interrupts and debugging access, enters at 32-bit protected mode and jumps to the provided entry point to start the execution of the isolated application.
 There is no possibility for others software executing before Flicker to monitor or interfere with Flicker's code.
 An example that sheds light on the potential of the aforementioned isolation property consists in a piece of code that handles a user's password, that will stay isolated from all other software running on the same machine. In the same scenario, the hardware can guarantee that the secrecy of the password has been preserved.  
 The authors implemented a rootkit detector in the Flicker architecture. In this other scenario, the hardware can guarantee that no other software, the rootkit included, could tamper with the detection code. 
@@ -425,29 +428,29 @@ TrustVisor can operate in host mode, which is the highest privilege level that c
 The TrustVisor architecture is implemented taking advantage of hardware virtualisation support, in order to provide memory isolation and DMA protection for each PAL. The virtualisation mechanisms are also used by TrustVisor to protect its own code. Specifically, TrustVisor virtualises the guest operating system's memory using Nested Page Tables (NPT) and IOMMU to prevent DMA-capable devices to access arbitrary physical memory addresses.
 PALs are isolated from each other with the same memory virtualisation mechanisms.
 The execution of PALs follows a registration event that must be requested explicitely by the developer. Both registration and unregistration are implemented by using a hypercall that is intercepted and handled directly by TrustVisor.
-The performance penalty of TrustVisor is much smaller that the one of Flicker and the security guarantees are comparable. The code base, around 6000 lines of code, is small enough to verify TrustVisor implementation using software model checking methods, that is what authors plan to achieve in the feature.
+The performance penalty of TrustVisor is much smaller than the one of Flicker and the security guarantees are comparable. The code base, around 6000 lines of code, is small enough to verify TrustVisor implementation using software model checking methods, that is what authors plan to achieve in the future.
 
 
 
 \paragraph{Fides}
-The goal of Fides \cite{fides} is to protect trusted modules from malware capable of exploiting vulnerabilities in the surrounding components of an operating system. The isolation properties of Fides make a vulnerable module exploitable only if other modules explicitly place trust in the former. In all other cases in which, for instance and attacker introduces malicious modules that are disconnected from the rest of the system, as is the case of rootkits, there are no viable ways to compromise the entire operating system. 
+The goal of Fides \cite{fides} is to protect trusted modules from malware capable of exploiting vulnerabilities in the surrounding components of an operating system. The isolation properties of Fides make a vulnerable module exploitable only if other modules explicitly place trust in the former. In all other cases in which, for instance an attacker introduces malicious modules that are disconnected from the rest of the system, as is the case of rootkits, there are no viable ways to compromise the entire operating system. 
 Fides combines a run-time security architecture that protects fine-grained software modules within a commodity operating system and a compiler that compiles modules written in the C language to exploit the security capabilities of the architecture on which they will execute.
 The software components that execute in isolation from the rest of the system are called Self Protecting Modules (SPM). They are basically a chunk of memory, formed by a secret section, that contains the module's sensitive data and a public section that contains information for which only integrity must be guaranteed. 
 The three main components that form Fides are: the legacy kernel with its applications that run without interruption and intervention of the security system; the hypervisor that manages the hardware and provides coarse grained memory isolation of the legacy and the secure virtual machines; the security kernel that manages the isolated software entities (SPM). The legacy kernel and the security kernel execute respectively in two virtual machines. Isolation and scheduling of the virtual machines are performed by the hypervisor, as in a regular virtualisation system.
 The isolation among SPMs is guaranteed by the security kernel. When a module is invoked, the security kernel receives a request in which the virtual address of the entry point of the module is specified. This address is translated to its physical equivalent with the aid of Nested Paging (NPT) in the legacy virtual machine.
 According to the Fides architecture, when the processor is executing outside the boundaries of the SPM, it has limited access to the module's memory. Also the destruction of the SPM follows a protocol that will leave no trace of its secret values to other components. 
 SPM modules can be written in C and compiled with a modified version of LLVM, that the authors provide. The aforementioned compiler ensures that each module implements its own stack, that registers and other sensitive areas are cleared upon returning to unprotected memory, that function pointers point to unprotected memory or to a function within an SPM correctly signed, and other security measures to execute in the Fides architecture.
-The overall performance impact has been measures to 3.22\%, but applications that make heavy usage of SPMs it can grow up to 14\%.
+The overall performance impact has been measured to 3.22\%, but for applications that make heavy usage of SPMs it can grow up to 14\%.
 The abilities of Fides such as confidentiality and integrity of module data, authentication and secure communication between modules, makes this architecture a suitable solution for high security environments.
 
 
 \paragraph{P-maps}
 The observations of the authors of P-MAPS \cite{pmaps} consist in the fact that stealthy malware can easily take advantage of the complexity of commodity operating systems. Moreover anti malware signature-based systems do not sufficiently protect against new malware, since they can recognise only known signatures. P-MAPS is a processor-measured service layer that reduces the trusted computing base of the target system in a dynamic way. This in turn improves the runtime security of user's applications without interrupting the regular execution of the operating system. P-MAPS has been designed to minimise its footprint so that it can be considered to protect mobile platforms, in which hardware and battery life are limited resources.
 Moreover, according to P-MAPS authors, the existing programming model should not be changed, low performance impact should be guaranteed when protection is active and there might be the co-existence with other hardware-based security countermeasures.
-The threat vector that the authors of P-MAPS address include internet downloads, an important source of malicious software downloaded in the form of system utilities, video codecs, etc, buffer overflows, still an effective and common practice to trigger attacks, network based infections such as via instant messages, peer-to-peer applications or emails. The type of attacks that can be prevented by P-MAPS attacks are code tampering, unauthorised data access, screen scraping, key logging, man-in-the-middle, Denial Of Service, to name a few.
+The threat vector that the authors of P-MAPS address include internet downloads, an important source of malicious software downloaded in the form of system utilities, video codecs, etc, buffer overflows, still an effective and common practice to trigger attacks, network based infections such as via instant messages, peer-to-peer applications or emails. The type of attacks that can be prevented by P-MAPS are code tampering, unauthorised data access, screen scraping, key logging, man-in-the-middle, Denial Of Service, to name a few.
 From a hardware view point, P-MAPS takes advantage of the virtualisation capabilities of Intel processors and Intel TXT.
 The architecture of P-MAPS is straightforward. P-MAPS core executes in the highest privilege level mode (VMX root) by which hardware separation from the target application is guaranteed. The P-MAPS core isolates the program's memory from other software executing on the platform, including the operating system kernel. Moreover in this architecture only code that is stored in the measured application pages can access application data and the circumvention of a function entry point exposed by a shared library is prohibited. 
-The platform starts with a commodity operating system running directly on physical hardware. As the P-MAPS protected application is launched, the P-MAPS core is loaded, measured and installed by the processor. Intel TXT technology is used to launch a trusted software environment at any time without platform reset (this is called late launch). At this point the application starts in untrusted mode and, once measured and protected by the P-MAPS core it executes in protected mode. The operating system executes in VMX-non root mode, as a guest. When the application terminates the P-MAPS core is uninstalled and the operating systems is executed back on physical hardware.
+The platform starts with a commodity operating system running directly on physical hardware. As the P-MAPS protected application is launched, the P-MAPS core is loaded, measured and installed by the processor. Intel TXT technology is used to launch a trusted software environment at any time without platform reset (this is called late launch). At this point the application starts in untrusted mode and, once measured and protected by the P-MAPS core it executes in protected mode. The operating system executes in VMX-non root mode, as a guest. When the application terminates the P-MAPS core is uninstalled and the operating system is executed back on physical hardware.
 Although all the security and isolation requirements are fulfilled within the P-MAPS architecture, switching between the two environments has a large performance impact. 
 
 
